--- a/overlays/tenant-dev/cr-definitions/products/echo-product.yaml
+++ b/overlays/tenant-dev/cr-definitions/products/echo-product.yaml
@@ -29,4 +29,4 @@ spec:
       authentication:
         oidc:
           issuerType: "keycloak"
-          issuerEndpoint: "https://testclient:7wyDCDc5yr6Nur1OD5bdHJQdUbRYIeRT@keycloak-rhsso-dev.apps.cluster-t2xqd.t2xqd.sandbox2018.opentlc.com/auth/realms/test"
+          issuerEndpoint: "https://testclient:7wyDCDc5yr6Nur1OD5bdHJQdUbRYIeRT@keycloak-rhsso-dev.apps.cluster-xrjzh.xrjzh.sandbox2942.opentlc.com/auth/realms/test"
