--- a/overlays-bkp/3scale/resources/secret-s3-auth.yaml
+++ b/overlays-bkp/3scale/resources/secret-s3-auth.yaml
@@ -3,10 +3,13 @@ apiVersion: v1
 metadata:
   name: s3-auth
 stringData:
+  #AWS_ACCESS_KEY_ID: sEGCcjufrtYX3xzUKVXv
+  #AWS_SECRET_ACCESS_KEY: TNApvSYwz0G0BGWhSgZnIEn4RpLggBoDH9sRNkyd
   AWS_ACCESS_KEY_ID: minioadmin
   AWS_SECRET_ACCESS_KEY: minioadmin
   AWS_BUCKET: 3scale
   AWS_REGION: eu-west-1
+  #AWS_HOSTNAME: minio-minio.apps.cluster-v2pdq.v2pdq.sandbox2054.opentlc.com
   AWS_HOSTNAME: minio.minio.svc.cluster.local:9000
   AWS_PROTOCOL: HTTP
   AWS_PATH_STYLE: "true"
