--- a/components/application-3scale-apicast-qa.yaml
+++ b/components/application-3scale-apicast-qa.yaml
@@ -1,34 +1,18 @@
 ---
 apiVersion: argoproj.io/v1alpha1
-kind: AppProject
-metadata:
-  generation: 1
-  name: 3scale
-  namespace: openshift-gitops
-spec:
-  clusterResourceWhitelist:
-    - group: '*'
-      kind: '*'
-  destinations:
-    - namespace: '*'
-      server: '*'
-  sourceRepos:
-    - '*'
----
-apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
   annotations:
     argocd.argoproj.io/sync-wave: "0"
-  name: 3scale-tenant-dev
+  name: 3scale-apicast-noprod-qa
   namespace: openshift-gitops
 spec:
   destination:
     name: ''
-    namespace: 3scale-dev
+    namespace: 3scale-apicast-qa
     server: 'https://kubernetes.default.svc'
   source:
-    path: overlays/tenant-dev
+    path: overlays/3scale-apicast-qa
 # we specify the folder for the files
     repoURL: 'https://github.com/VictorFernandezArias/gitops-deploy-3scale.git'
 # the repository url
