--- a/overlays/3scale-apicast-dev/kustomization.yaml
+++ b/overlays/3scale-apicast-dev/kustomization.yaml
@@ -3,8 +3,8 @@ kind: Kustomization
 bases:
   - ../../base-operator-apicast
 
-configurations:
-  - config.yaml
+# configurations:
+#   - config.yaml
 
 generatorOptions:
   disableNameSuffixHash: true
