--- a/overlays/3scale-apicast-dev/resources/apicast-instance-production.yaml
+++ b/overlays/3scale-apicast-dev/resources/apicast-instance-production.yaml
@@ -4,6 +4,7 @@ kind: APIcast
 metadata:
   annotations:
     apicast.apps.3scale.net/operator-version: 0.8.0
+    argocd.argoproj.io/sync-wave: "1"
   name: apicast-production
 spec:
   adminPortalCredentialsRef:
