--- a/components/application-3scale-apicast-dev.yaml
+++ b/components/application-3scale-apicast-dev.yaml
@@ -2,9 +2,7 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  annotations:
-    argocd.argoproj.io/sync-wave: "0"
-  name: 3scale-apicast-noprod-dev
+  name: 3scale-apicast-dev
   namespace: openshift-gitops
 spec:
   destination:
