--- a/components/application-3scale-apicast-dev.yaml
+++ b/components/application-3scale-apicast-dev.yaml
@@ -1,5 +1,21 @@
 ---
 apiVersion: argoproj.io/v1alpha1
+kind: AppProject
+metadata:
+  generation: 1
+  name: 3scale-apicast-dev
+  namespace: openshift-gitops
+spec:
+  clusterResourceWhitelist:
+    - group: '*'
+      kind: '*'
+  destinations:
+    - namespace: '*'
+      server: '*'
+  sourceRepos:
+    - '*'
+---
+apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
   name: 3scale-apicast-dev
@@ -16,7 +32,7 @@ spec:
 # the repository url
     targetRevision: main
 # and branch, in this case HEAD / main 
-  project: 3scale
+  project: 3scale-apicast-dev
   syncPolicy:
     automated:
       prune: true
