--- a/components/application-3scale-apicast-dev.yaml
+++ b/components/application-3scale-apicast-dev.yaml
@@ -18,6 +18,8 @@ spec:
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
+  annotations:
+    argocd.argoproj.io/sync-wave: "0"
   name: 3scale-apicast-dev
   namespace: openshift-gitops
 spec:
