--- a/base-operator-apicast/apicast-operator_subscription.yaml
+++ b/base-operator-apicast/apicast-operator_subscription.yaml
@@ -4,8 +4,8 @@ kind: Subscription
 metadata:
   annotations:
     argocd.argoproj.io/sync-wave: "1"
-  labels:
-    operators.coreos.com/apicast-operator.3scale-borrar: ''
+  # labels:
+  #   operators.coreos.com/apicast-operator.3scale-apicast-dev: ''
   name: apicast-operator
 spec:
   channel: threescale-2.14
