--- a/base-operator-apicast/kustomization.yaml
+++ b/base-operator-apicast/kustomization.yaml
@@ -2,4 +2,4 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
 - apicast-operator_operatorgroup.yaml 
-- apicast-operator_subscription.yaml
+# - apicast-operator_subscription.yaml
