--- a/components/application-3scale-apicast-qa.yaml
+++ b/components/application-3scale-apicast-qa.yaml
@@ -4,7 +4,7 @@ kind: Application
 metadata:
   annotations:
     argocd.argoproj.io/sync-wave: "0"
-  name: 3scale-apicast-noprod-qa
+  name: 3scale-apicast-qa
   namespace: openshift-gitops
 spec:
   destination:
