--- a/overlays/3scale-apicast-qa/kustomization.yaml
+++ b/overlays/3scale-apicast-qa/kustomization.yaml
@@ -6,16 +6,16 @@ bases:
 # configurations:
 #   - config.yaml
 
-generatorOptions:
-  disableNameSuffixHash: true
+# generatorOptions:
+#   disableNameSuffixHash: true
 
-secretGenerator:
-- name: token-apicast-staging
-  envs:
-  - env/token-secret.env
-- name: token-apicast-production
-  envs:
-  - env/token-secret.env
+# secretGenerator:
+# - name: token-apicast-staging
+#   envs:
+#   - env/token-secret.env
+# - name: token-apicast-production
+#   envs:
+#   - env/token-secret.env
 
 patches:
 - patch: |-
@@ -32,19 +32,19 @@ patches:
 #   - path: image-tag-replacement.yaml
 
 resources: 
-- resources/namespace.yaml
-- resources/apicast-instance-staging.yaml
-- resources/apicast-instance-production.yaml
+# - resources/namespace.yaml
+# - resources/apicast-instance-staging.yaml
+# - resources/apicast-instance-production.yaml
 
 
 
 
-vars:
-  - name: DOMAIN
-    objref:
-      apiVersion: apps.3scale.net/v1alpha1
-      kind: APIManager
-      name: apimanager
-    fieldref:
-      fieldpath: spec.wildcardDomain
+# vars:
+#   - name: DOMAIN
+#     objref:
+#       apiVersion: apps.3scale.net/v1alpha1
+#       kind: APIManager
+#       name: apimanager
+#     fieldref:
+#       fieldpath: spec.wildcardDomain
 
