--- a/overlays/3scale-apicast-qa/kustomization.yaml
+++ b/overlays/3scale-apicast-qa/kustomization.yaml
@@ -33,8 +33,8 @@ patches:
 
 resources: 
 # - resources/namespace.yaml
-# - resources/apicast-instance-staging.yaml
-# - resources/apicast-instance-production.yaml
+- resources/apicast-instance-staging.yaml
+- resources/apicast-instance-production.yaml
 
 
 
