--- a/overlays/3scale-apicast-qa/kustomization.yaml
+++ b/overlays/3scale-apicast-qa/kustomization.yaml
@@ -6,16 +6,16 @@ bases:
 # configurations:
 #   - config.yaml
 
-# generatorOptions:
-#   disableNameSuffixHash: true
+generatorOptions:
+  disableNameSuffixHash: true
 
-# secretGenerator:
-# - name: token-apicast-staging
-#   envs:
-#   - env/token-secret.env
-# - name: token-apicast-production
-#   envs:
-#   - env/token-secret.env
+secretGenerator:
+- name: token-apicast-staging
+  envs:
+  - env/token-secret.env
+- name: token-apicast-production
+  envs:
+  - env/token-secret.env
 
 patches:
 - patch: |-
